# g1-isaac-fastlio-nav2

./: .gitignore  CONTRIBUTING.md  README.md  ROADMAP.md  repository_manifest.json  third_party.md
.github/workflows/: markdown-check.yml
assets/images/: README.md
config/fast_lio/: g1_isaac_fastlio.template.yaml  g1_real_mid360_fastlio.template.yaml
config/nav2/: README.md  g1_nav2_params.template.yaml
config/unitree/: dds_wired.template.env
docs/: 00_project_overview.md  01_environment_setup.md  02_isaac_sim_scene_setup.md  03_g1_proxy_bridge.md  04_fast_lio_mapping.md  05_nav2_integration_plan.md  06_troubleshooting.md  07_real_robot_wired_dds.md  08_real_robot_data_pipeline.md  09_release_v0_2.md  10_safety_notes.md  progress_log.md
launch/: g1_proxy_bridge.launch.py
scripts/: check_tf.sh  check_topics.sh  create_repo_with_gh_cli.sh  push_to_github_template.sh  push_v02_update.sh  real_g1_network_readonly_check.sh  record_bag.sh  record_real_g1_bag_readonly.sh  setup_workspace.sh
src/g1_proxy_bridge/: package.xml  setup.cfg  setup.py
src/g1_proxy_bridge/g1_proxy_bridge/: g1_proxy_bridge_node.py  g1_topic_monitor.py
src/g1_proxy_bridge/launch/: g1_proxy_bridge.launch.py
